--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 services:
   mysql:
     image: mysql:8.0.28
+    container_name: mysql-container
     platform: linux/x86_64
     ports:
       - "3306:3306"
